<resources>
    <string name="app_name">My Test Application</string>
    <string name="header_name">Get random number</string>
    <string name="signature_text">Your number %s</string>
    <string name="button_text">Roll</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="service_question">How was the service</string>
    <string name="option1">Amazing (20%)</string>
    <string name="option2">Good (18%)</string>
    <string name="option3">OK (15%)</string>
    <string name="round_switch">Round up tip?</string>
    <string name="calculate_tips">Calculate</string>
    <string name="tips_result">Tips Amount %s</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="detail_prefix">Words That Start With</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="look_up_word">Look up word in a Browser Search</string>
    <string name="look_up_words">Show Stored Words</string>
    <string name="word_list_fragment_label">Words That Start With {letter}</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <string name="example_resource">Last Name: %s</string>
</resources>